fix: adjust layout and overflow properties for improved responsiveness

--- a/frontend/src/components/Layout/styles.css
+++ b/frontend/src/components/Layout/styles.css
@@ -2,9 +2,10 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    height: 100vh;
     width: 100vw;
     color: var(--blue);
+    overflow-y: auto;
     overflow-x: hidden;
 }
 
